--- a/server/package.json
+++ b/server/package.json
@@ -4,20 +4,41 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "ts-node src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "all": "tsc && node dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "auth0": "^4.27.0",
+    "axios": "^1.10.0",
+    "bcryptjs": "^2.4.3",
+    "cheerio": "^1.1.0",
     "cors": "^2.8.5",
     "dotenv": "^17.0.0",
-    "express": "^5.1.0"
+    "express": "^4.21.0",
+    "express-jwt": "^8.5.1",
+    "express-oauth-server": "^2.0.0",
+    "jsonwebtoken": "^9.0.0",
+    "jwks-rsa": "^3.2.0",
+    "mongoose": "^8.16.1",
+    "node-cache": "^5.1.2",
+    "openai": "^5.8.2",
+    "url": "^0.11.4"
   },
   "devDependencies": {
-    "@types/express": "^5.0.3",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.0",
+    "@types/express-jwt": "^6.0.4",
+    "@types/jsonwebtoken": "^9.0.0",
+    "@types/mongoose": "^5.11.0",
     "@types/node": "^24.0.7",
+    "@types/node-cache": "^4.1.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
