--- a/server/.env.example
+++ b/server/.env.example
@@ -49,7 +49,7 @@ AUTH0_PERMISSIONS_CLAIM=https://api.pagepersona.com/permissions
 LOG_LEVEL=info
 
 # CORS Configuration (Optional - has defaults)
-ALLOWED_ORIGINS=https://pagepersonai.com,https://www.pagepersonai.com
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5000,http://127.0.0.1:3000,http://127.0.0.1:5000
 
 # Rate Limiting (Optional - uses defaults from rateLimitConfigs.ts)
 # RATE_LIMIT_WINDOW_MS=900000
