--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "description": "PagePersonAI Backend API - AI-powered content transformation service",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "tsc && ts-node src/index.ts",
-    "build": "tsc",
+    "dev": "tsx watch src/index.ts",
+    "build": "tsc && tsc-alias",
     "start": "node dist/index.js",
     "test": "vitest run",
     "test:watch": "vitest",
@@ -13,7 +13,15 @@
     "test:coverage": "vitest run --coverage",
     "lint": "eslint ."
   },
-  "keywords": ["ai", "content-transformation", "openai", "personas", "web-scraping", "typescript", "express"],
+  "keywords": [
+    "ai",
+    "content-transformation",
+    "openai",
+    "personas",
+    "web-scraping",
+    "typescript",
+    "express"
+  ],
   "author": "PagePersonAI Team",
   "license": "MIT",
   "type": "commonjs",
@@ -30,6 +38,7 @@
     "jwks-rsa": "^3.2.0",
     "mongoose": "^8.16.1",
     "node-cache": "^5.1.2",
+    "nvm": "^0.0.4",
     "openai": "^5.8.2",
     "redis": "^5.5.6",
     "zod": "^3.25.76"
@@ -40,6 +49,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.0",
     "@types/express-jwt": "^6.0.4",
+    "@types/express-unless": "^0.5.3",
     "@types/jsonwebtoken": "^9.0.0",
     "@types/mongoose": "^5.11.0",
     "@types/node": "^24.0.7",
@@ -54,6 +64,8 @@
     "globals": "^13.24.0",
     "supertest": "^7.1.1",
     "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.16",
+    "tsx": "^4.20.3",
     "typescript": "^5.8.3",
     "typescript-eslint": "^7.0.0",
     "vitest": "^3.2.4"
