--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "PagePersonAI Backend API - AI-powered content transformation service",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "dev": "tsx src/index.ts",
     "build": "tsc && tsc-alias",
     "start": "node dist/index.js",
     "test": "vitest run",
