--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "@headlessui/react": "^2.2.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-markdown": "^10.1.0"
+    "react-markdown": "^10.1.0",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
