--- a/shared/tsconfig.json
+++ b/shared/tsconfig.json
@@ -10,6 +10,7 @@
     "strict": true,
     "declaration": true,
     "declarationMap": true,
+    "composite": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
