--- a/shared/tsconfig.json
+++ b/shared/tsconfig.json
@@ -12,7 +12,8 @@
     "declarationMap": true,
     "composite": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "outDir": "dist"
   },
   "include": [
     "**/*.ts"
