--- a/client/package.json
+++ b/client/package.json
@@ -5,8 +5,9 @@
   "description": "PagePersonAI Frontend - Transform web content with AI-powered personas",
   "type": "module",
   "scripts": {
-    "dev": "tsc -b && vite",
-    "build": "tsc -b && vite build",
+    "build": "vite build",
+    "dev": "vite",
+    "serve": "vite preview",
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest run",
@@ -23,7 +24,6 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@eslint/js": "^9.29.0",
     "@tailwindcss/postcss": "^4.1.11",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -36,15 +36,10 @@
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9.29.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.2.0",
     "jsdom": "^26.1.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.34.1",
     "vite": "^7.0.0",
     "vitest": "^3.2.4"
   }
