--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,10 @@
   "description": "PagePersonAI Backend API - AI-powered content transformation service",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "tsx src/index.ts",
-    "build": "tsc && tsc-alias",
+    "build": "tsc -b .",
     "start": "node dist/index.js",
+    "start:dev": "tsx src/index.ts",
+    "dev": "tsx src/index.ts",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
@@ -44,7 +45,6 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@eslint/js": "^8.56.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.0",
@@ -55,19 +55,13 @@
     "@types/node": "^24.0.7",
     "@types/node-cache": "^4.1.3",
     "@types/supertest": "^6.0.3",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
-    "eslint": "^8.56.0",
-    "eslint-plugin-import": "^2.29.1",
     "globals": "^13.24.0",
     "supertest": "^7.1.1",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.16",
     "tsx": "^4.20.3",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^7.0.0",
     "vitest": "^3.2.4"
   }
 }
