--- a/server/package.json
+++ b/server/package.json
@@ -41,7 +41,10 @@
     "node-cache": "^5.1.2",
     "nvm": "^0.0.4",
     "openai": "^5.8.2",
+    "openapi3-ts": "^4.4.0",
     "redis": "^5.5.6",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "zod": "^3.25.76"
   },
   "devDependencies": {
@@ -55,6 +58,8 @@
     "@types/node": "^24.0.7",
     "@types/node-cache": "^4.1.3",
     "@types/supertest": "^6.0.3",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "globals": "^13.24.0",
