--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,50 +1,32 @@
-# Production Dockerfile for PagePersonAI Server
-FROM node:20-alpine AS base
-
-# Install dependencies only when needed
-FROM base AS deps
-RUN apk add --no-cache libc6-compat
-WORKDIR /app
-
-# Copy package files
-COPY package*.json ./
-RUN npm ci --only=production
-
-# Build the application
-FROM base AS builder
+# -------- Builder Stage --------
+FROM node:18-alpine AS builder
 WORKDIR /app
 COPY package*.json ./
 RUN npm ci
-
-# Copy source code
-COPY . .
-COPY --from=deps /app/node_modules ./node_modules
-
-# Build the application
+COPY tsconfig*.json ./
+COPY src/ src/
 RUN npm run build
 
-# Production image
-FROM base AS runner
+# -------- Production Stage --------
+FROM node:18-alpine AS production
 WORKDIR /app
+ENV NODE_ENV=production
 
 # Create non-root user
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nodejs
 
-# Copy built application
+COPY package*.json ./
+RUN npm ci --only=production
+
 COPY --from=builder --chown=nodejs:nodejs /app/dist ./dist
-COPY --from=builder --chown=nodejs:nodejs /app/package*.json ./
-COPY --from=deps --chown=nodejs:nodejs /app/node_modules ./node_modules
 
 USER nodejs
 
-EXPOSE 5000
-
-ENV NODE_ENV=production
-ENV PORT=5000
+EXPOSE 3000
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-  CMD curl -f http://localhost:5000/api/health || exit 1
+  CMD curl -f http://localhost:3000/api/health || exit 1
 
-CMD ["npm", "start"]
+CMD ["node", "dist/index.js"]
