--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "axios": "^1.10.0",
     "bcryptjs": "^2.4.3",
     "cheerio": "^1.1.0",
+    "compression": "^1.8.0",
     "cors": "^2.8.5",
     "dotenv": "^17.0.0",
     "express": "^4.21.0",
@@ -49,6 +50,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.0",
     "@types/express-jwt": "^6.0.4",
