--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc -b .",
     "start": "node dist/index.js",
-    "start:dev": "tsx src/index.ts",
+    "start:dev": "ts-node-dev --respawn src/index.ts",
     "dev": "tsx src/index.ts",
     "test": "vitest run",
     "test:watch": "vitest",
@@ -67,6 +67,7 @@
     "globals": "^13.24.0",
     "supertest": "^7.1.1",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "tsc-alias": "^1.8.16",
     "tsx": "^4.20.3",
     "vitest": "^3.2.4"
