feat: add Redis caching for transform results

--- a/.env.production
+++ b/.env.production
@@ -95,6 +95,7 @@ DAILY_LIMIT_PREMIUM=100
 
 # Cache Settings (Optional - has defaults)
 CACHE_TTL=3600
+CACHE_TTL_SECONDS=3600
 
 # Redis Configuration (REQUIRED for production)
 REDIS_URL=redis://localhost:6379
