--- a/.env.development
+++ b/.env.development
@@ -95,6 +95,7 @@ DAILY_LIMIT_PREMIUM=100
 
 # Cache Settings (Optional - has defaults)
 CACHE_TTL=3600
+CACHE_TTL_SECONDS=3600
 
 # Redis Configuration (Optional - graceful fallback to in-memory if not available)
 REDIS_URL=redis://localhost:6379
