--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,9 @@
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
+    "test:redis": "tsx src/__tests__/redis-cache-test.ts",
+    "test:cached": "tsx src/__tests__/cached-transformer-test.ts",
+    "test:integration": "tsx src/__tests__/integration-cache-test.ts",
     "lint": "eslint ."
   },
   "keywords": [
@@ -36,6 +39,7 @@
     "dotenv": "^17.0.0",
     "express": "^4.21.0",
     "express-jwt": "^8.5.1",
+    "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.0",
     "jwks-rsa": "^3.2.0",
     "mongoose": "^8.16.1",
