--- a/server/package.json
+++ b/server/package.json
@@ -39,6 +39,7 @@
     "dotenv": "^17.0.0",
     "express": "^4.21.0",
     "express-jwt": "^8.5.1",
+    "express-rate-limit": "^8.0.0",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.0",
     "jwks-rsa": "^3.2.0",
@@ -47,6 +48,7 @@
     "nvm": "^0.0.4",
     "openai": "^5.8.2",
     "openapi3-ts": "^4.4.0",
+    "rate-limit-redis": "^4.2.1",
     "redis": "^5.5.6",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
