--- a/server/package.json
+++ b/server/package.json
@@ -40,6 +40,7 @@
     "express": "^4.21.0",
     "express-jwt": "^8.5.1",
     "express-rate-limit": "^8.0.0",
+    "helmet": "^8.1.0",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.0",
     "jwks-rsa": "^3.2.0",
@@ -61,6 +62,7 @@
     "@types/express": "^4.17.0",
     "@types/express-jwt": "^6.0.4",
     "@types/express-unless": "^0.5.3",
+    "@types/helmet": "^0.0.48",
     "@types/jsonwebtoken": "^9.0.0",
     "@types/mongoose": "^5.11.0",
     "@types/node": "^24.0.7",
