--- a/server/package.json
+++ b/server/package.json
@@ -51,6 +51,7 @@
     "openapi3-ts": "^4.4.0",
     "rate-limit-redis": "^4.2.1",
     "redis": "^5.5.6",
+    "sanitize-html": "^2.17.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "zod": "^3.25.76"
@@ -67,6 +68,7 @@
     "@types/mongoose": "^5.11.0",
     "@types/node": "^24.0.7",
     "@types/node-cache": "^4.1.3",
+    "@types/sanitize-html": "^2.16.0",
     "@types/supertest": "^6.0.3",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
