--- a/.env.production
+++ b/.env.production
@@ -39,6 +39,7 @@ AUTH0_DOMAIN=your-auth0-domain.auth0.com
 AUTH0_CLIENT_ID=your-auth0-client-id
 AUTH0_CLIENT_SECRET=your-auth0-client-secret
 AUTH0_AUDIENCE=your-auth0-api-identifier
+AUTH0_ISSUER=https://your-auth0-domain.auth0.com/
 
 # Auth0 Custom Claims (Optional - has defaults)
 AUTH0_CUSTOM_USER_ID_CLAIM=https://api.pagepersona.com/user_id
