--- a/server/package.json
+++ b/server/package.json
@@ -39,6 +39,7 @@
     "dotenv": "^17.0.0",
     "express": "^4.21.0",
     "express-jwt": "^8.5.1",
+    "express-jwt-authz": "^2.4.1",
     "express-rate-limit": "^8.0.0",
     "helmet": "^8.1.0",
     "ioredis": "^5.6.1",
