--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "prepare": "husky",
     "build": "npm run build --workspace=shared && npm run build --workspace=server && npm run build --workspace=client",
     "start:dev": "npm run start:dev --workspace=server & npm run dev --workspace=client",
-    "test": "npm test --workspaces",
+    "test": "npm run test --workspace=server && npm run test --workspace=client",
+    "test:coverage": "npm run test:coverage --workspace=server && npm run test:coverage --workspace=client",
     "clean": "rimraf */dist */node_modules/.cache",
     "release": "standard-version"
   },
