--- a/package.json
+++ b/package.json
@@ -7,11 +7,20 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "format": "prettier --write .",
     "prepare": "husky",
+    "prebuild": "npm run typecheck",
     "build": "npm run build --workspace=shared && npm run build --workspace=server && npm run build --workspace=client",
-    "start:dev": "npm run start:dev --workspace=server & npm run dev --workspace=client",
+    "build:shared": "npm run build --workspace=shared",
+    "build:server": "npm run build:shared && npm run build --workspace=server",
+    "build:client": "npm run build:shared && npm run build --workspace=client",
+    "typecheck": "tsc --build --noEmit",
+    "typecheck:server": "tsc --build server --noEmit",
+    "typecheck:client": "tsc --build client --noEmit",
+    "typecheck:shared": "tsc --build shared --noEmit",
+    "start:dev": "npm run build:shared && npm run start:dev --workspace=server & npm run dev --workspace=client",
     "test": "npm run test --workspace=server && npm run test --workspace=client",
     "test:coverage": "npm run test:coverage --workspace=server && npm run test:coverage --workspace=client",
     "clean": "rimraf */dist */node_modules/.cache",
+    "clean:build": "rimraf */dist && npm run build",
     "release": "standard-version"
   },
   "workspaces": [
