--- a/client/package.json
+++ b/client/package.json
@@ -5,9 +5,12 @@
   "description": "PagePersonAI Frontend - Transform web content with AI-powered personas",
   "type": "module",
   "scripts": {
+    "prebuild": "npm run typecheck",
     "build": "vite build",
+    "postbuild": "echo \"Client built successfully\"",
     "dev": "vite",
     "serve": "vite preview",
+    "typecheck": "tsc --noEmit",
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest run",
@@ -28,7 +31,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
-    "@types/node": "^20.19.7",
+    "@types/node": "^20.19.8",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/testing-library__jest-dom": "^5.14.9",
