--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,14 @@
   "description": "PagePersonAI Backend API - AI-powered content transformation service",
   "main": "dist/index.js",
   "scripts": {
+    "prebuild": "npm run typecheck",
     "build": "tsc -b .",
+    "postbuild": "tsc-alias",
     "start": "node dist/index.js",
+    "prestart:dev": "npm run typecheck",
     "start:dev": "ts-node-dev --respawn src/index.ts",
     "dev": "tsx src/index.ts",
+    "typecheck": "tsc --noEmit",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
@@ -60,14 +64,17 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/compression": "^1.8.1",
+    "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
-    "@types/express": "^4.17.0",
+    "@types/dotenv": "^6.1.1",
+    "@types/express": "^4.17.23",
     "@types/express-jwt": "^6.0.4",
     "@types/express-unless": "^0.5.3",
     "@types/helmet": "^0.0.48",
     "@types/jsonwebtoken": "^9.0.0",
     "@types/mongoose": "^5.11.0",
-    "@types/node": "^24.0.7",
+    "@types/morgan": "^1.9.10",
+    "@types/node": "^24.0.14",
     "@types/node-cache": "^4.1.3",
     "@types/sanitize-html": "^2.16.0",
     "@types/supertest": "^6.0.3",
