--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -19,14 +19,24 @@
     "noImplicitThis": true,
     "alwaysStrict": true,
     "moduleResolution": "node",
-    "typeRoots": ["./src/types", "./node_modules/@types"],
+    "typeRoots": ["src/types", "node_modules/@types"],
     "baseUrl": ".",
     "paths": {
       "@pagepersonai/shared/*": ["../shared/*"],
-      "@pagepersonai/shared": ["../shared"]
-    }
+      "@pagepersonai/shared": ["../shared"],
+      "shared/*": ["../shared/*"],
+      "shared": ["../shared"]
+    },
+    "incremental": true,
+    "tsBuildInfoFile": "./dist/tsconfig.tsbuildinfo"
   },
-  "include": ["src/**/*", "vitest.config.ts"],
+  "files": [],
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.d.ts",
+    "src/types/**/*.d.ts",
+    "vitest.config.ts"
+  ],
   "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.backup.ts", "**/__tests__/**/*"],
   "references": [
     { "path": "../shared" }
