--- a/shared/tsconfig.json
+++ b/shared/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "ES2020",
     "lib": ["ES2020"],
     "module": "ESNext",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "allowJs": true,
@@ -13,7 +13,13 @@
     "composite": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "outDir": "dist"
+    "outDir": "dist",
+    "rootDir": ".",
+    "incremental": true,
+    "tsBuildInfoFile": "./dist/tsconfig.tsbuildinfo",
+    "importsNotUsedAsValues": "remove",
+    "emitDeclarationOnly": false,
+    "resolveJsonModule": true
   },
   "include": [
     "**/*.ts"
