--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
+    "test:coverage:ci": "vitest run --coverage --config vitest.config.ci.ts",
     "lint": "eslint ."
   },
   "keywords": [
