--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -8,6 +8,11 @@ on:
 
 env:
   NODE_VERSION: '20'
+  FORCE_COLOR: '1'
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   test:
@@ -49,59 +54,55 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: |
-          npm install
-          cd client && npm install
-          cd ../server && npm install
+        run: npm ci
+
+      - name: Build shared package
+        run: npm run build:shared
 
       - name: Lint code
-        run: |
-          cd client && npm run lint
-          cd ../server && npm run lint
+        run: npm run lint
 
-      - name: Run server tests
-        run: cd server && npm test
+      - name: Type check
+        run: npm run typecheck
+
+      - name: Run tests
+        run: npm test
         env:
           NODE_ENV: test
           MONGODB_URI: mongodb://test:test@localhost:27017/test?authSource=admin
           REDIS_URL: redis://localhost:6379
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY || 'test-key' }}
           AUTH0_DOMAIN: test.auth0.com
           JWT_SECRET: test-secret-for-ci-testing-minimum-32-chars
-
-      - name: Run client tests
-        run: cd client && npm test
+          VITE_AUTH0_DOMAIN: test.auth0.com
+          VITE_AUTH0_CLIENT_ID: test-client-id
+          VITE_AUTH0_AUDIENCE: https://test.api
 
       - name: Run coverage check
-        run: |
-          cd server && npm run test -- --coverage --passWithNoTests=false
-          cd ../client && npm run test -- --coverage --passWithNoTests=false
+        run: npm run test:coverage:ci
         env:
           NODE_ENV: test
           MONGODB_URI: mongodb://test:test@localhost:27017/test?authSource=admin
           REDIS_URL: redis://localhost:6379
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY || 'test-key' }}
           AUTH0_DOMAIN: test.auth0.com
           JWT_SECRET: test-secret-for-ci-testing-minimum-32-chars
           VITE_AUTH0_DOMAIN: test.auth0.com
           VITE_AUTH0_CLIENT_ID: test-client-id
           VITE_AUTH0_AUDIENCE: https://test.api
 
-      - name: Build server
-        run: cd server && npm run build
-
-      - name: Build client
-        run: cd client && npm run build
+      - name: Build project
+        run: npm run build
         env:
-          VITE_AUTH0_DOMAIN: test.auth0.com
-          VITE_AUTH0_CLIENT_ID: test-client-id
-          VITE_AUTH0_AUDIENCE: https://test.api
+          VITE_AUTH0_DOMAIN: ${{ secrets.VITE_AUTH0_DOMAIN || 'test.auth0.com' }}
+          VITE_AUTH0_CLIENT_ID: ${{ secrets.VITE_AUTH0_CLIENT_ID || 'test-client-id' }}
+          VITE_AUTH0_AUDIENCE: ${{ secrets.VITE_AUTH0_AUDIENCE || 'https://test.api' }}
 
   deploy:
     name: Deploy to Production
     runs-on: ubuntu-latest
     needs: test
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
 
     steps:
       - name: Checkout code
@@ -111,31 +112,34 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Login to DockerHub
+        if: secrets.DOCKERHUB_USERNAME
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push server image
+        if: secrets.DOCKERHUB_USERNAME
         uses: docker/build-push-action@v5
         with:
           context: ./server
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/pagepersonai-server:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/pagepersonai-server:latest,${{ secrets.DOCKERHUB_USERNAME }}/pagepersonai-server:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
       - name: Build and push client image
+        if: secrets.DOCKERHUB_USERNAME
         uses: docker/build-push-action@v5
         with:
           context: ./client
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/pagepersonai-client:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/pagepersonai-client:latest,${{ secrets.DOCKERHUB_USERNAME }}/pagepersonai-client:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      # Optional: Deploy to cloud provider
-      # - name: Deploy to Railway/Render/DigitalOcean
-      #   run: |
-      #     # Add your deployment commands here
-      #     echo "Deploying to production..."
+      - name: Deploy notification
+        run: |
+          echo "✅ Build and test pipeline completed successfully!"
+          echo "🚀 Ready for deployment"
+          echo "💡 Add your deployment commands here for Railway, Render, DigitalOcean, etc."
