--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start:dev": "npm run build:shared && concurrently \"npm run start:dev --workspace=server\" \"npm run dev --workspace=client\"",
     "test": "npm run test --workspace=server && npm run test --workspace=client",
     "test:coverage": "npm run test:coverage --workspace=server && npm run test:coverage --workspace=client",
+    "test:coverage:ci": "npm run test:coverage:ci --workspace=server && npm run test:coverage --workspace=client",
     "lint": "eslint .",
     "format": "prettier --write .",
     "typecheck": "tsc --build",
