--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_ROOT_PASSWORD:-password}
       MONGO_INITDB_DATABASE: ${MONGO_DATABASE:-pagepersona}
     ports:
-      - "27017:27017"
+      - '27017:27017'
     volumes:
       - mongodb_data:/data/db
       - mongodb_config:/data/configdb
@@ -25,7 +25,7 @@ services:
     restart: unless-stopped
     command: redis-server --appendonly yes --requirepass ${REDIS_PASSWORD:-redispassword}
     ports:
-      - "6379:6379"
+      - '6379:6379'
     volumes:
       - redis_data:/data
     networks:
@@ -48,14 +48,14 @@ services:
       AUTH0_AUDIENCE: ${AUTH0_AUDIENCE}
       JWT_SECRET: ${JWT_SECRET}
     ports:
-      - "3000:3000"
+      - '3000:3000'
     depends_on:
       - mongodb
       - redis
     networks:
       - pagepersonai-network
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3000/api/health"]
+      test: ['CMD', 'curl', '-f', 'http://localhost:3000/api/health']
       interval: 30s
       timeout: 10s
       retries: 3
@@ -69,13 +69,13 @@ services:
     container_name: pagepersonai-client
     restart: unless-stopped
     ports:
-      - "80:80"
+      - '80:80'
     depends_on:
       - server
     networks:
       - pagepersonai-network
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost/health"]
+      test: ['CMD', 'curl', '-f', 'http://localhost/health']
       interval: 30s
       timeout: 10s
       retries: 3
@@ -86,8 +86,8 @@ services:
     container_name: pagepersonai-proxy
     restart: unless-stopped
     ports:
-      - "443:443"
-      - "8080:80"
+      - '443:443'
+      - '8080:80'
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/ssl:/etc/nginx/ssl:ro
