--- a/.prettierignore
+++ b/.prettierignore
@@ -30,7 +30,6 @@ coverage/
 .prettierrc
 .eslintrc*
 tsconfig*.json
-.env.*
 
 # IDE files
 .vscode/
@@ -44,7 +43,9 @@ Thumbs.db
 
 # Logs
 *.log
-logs/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Database
 *.db
@@ -55,27 +56,12 @@ logs/
 *.temp
 
 # Docker
-Dockerfile
-docker-compose.yml
-.dockerignore
+Dockerfile*
+docker-compose*.yml
 
 # Config files
 *.config.js
+*.config.mjs
 *.config.ts
-tsconfig.json
-vitest.config.ts
-vite.config.ts
-
-# Git
-.git/
-.gitignore
-
-# Documentation
-*.md
-LICENSE
-
-# Specific project files
-deploy.sh
-output.zip
-*.zip
-*.tar.gz
+vitest.config.*
+vite.config.*
