--- a/config/.prettierrc
+++ b/config/.prettierrc
@@ -5,7 +5,7 @@
   "semi": true,
   "tabWidth": 2,
   "useTabs": false,
-  "endOfLine": "lf",
+  "endOfLine": "auto",
   "bracketSpacing": true,
   "arrowParens": "always",
   "proseWrap": "preserve"
