--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "npm run test --workspace=server && npm run test --workspace=client",
     "test:coverage": "npm run test:coverage --workspace=server && npm run test:coverage --workspace=client",
     "test:coverage:ci": "npm run test:coverage:ci --workspace=server && npm run test:coverage --workspace=client",
-    "lint": "eslint .",
+    "lint": "eslint . --fix",
     "format": "prettier --write . --config config/.prettierrc",
     "typecheck": "tsc --build",
     "clean": "rimraf */dist */node_modules/.cache",
