--- a/server/package.json
+++ b/server/package.json
@@ -14,8 +14,7 @@
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
     "test:coverage:ci": "vitest run --coverage --config vitest.config.ci.ts",
-    "lint": "eslint .",
-    "add-types": "npm install --save-dev @types/cors @types/compression @types/swagger-jsdoc @types/swagger-ui-express @types/sanitize-html @vitest/types"
+    "lint": "eslint ."
   },
   "keywords": [
     "ai",
