--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "format": "prettier --write . --config config/.prettierrc",
     "typecheck": "tsc --build",
     "clean": "rimraf */dist */node_modules/.cache",
-    "prepare": "husky",
-    "add-types": "npm install --save-dev @types/cors @types/compression @types/swagger-jsdoc @types/swagger-ui-express @types/sanitize-html @vitest/types"
+    "prepare": "husky install"
   },
   "workspaces": [
     "shared",
@@ -38,7 +37,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "husky": "^9.0.11",
+    "husky": "^9.1.7",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
     "rimraf": "^5.0.5",
