chore: add tsc-alias to devDependencies for postbuild

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
     "rimraf": "^5.0.5",
+    "tsc-alias": "^1.8.16",
     "typescript": "^5.5.4"
   },
   "lint-staged": {
