--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc -b .",
-    "postbuild": "tsc-alias",
+    "postbuild": "npx tsc-alias",
     "start": "node dist/index.js",
     "start:dev": "ts-node-dev --respawn src/index.ts",
     "dev": "tsx src/index.ts",
