--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc -b .",
-    "postbuild": "npx tsc-alias",
+    "postbuild": "tsc-alias",
     "start": "node dist/index.js",
     "start:dev": "ts-node-dev --respawn src/index.ts",
     "dev": "tsx src/index.ts",
@@ -54,6 +54,7 @@
     "sanitize-html": "^2.17.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
+    "tsc-alias": "^1.8.16",
     "typescript": "^5.8.3",
     "zod": "^3.25.76"
   },
