--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
     "rimraf": "^5.0.5",
-    "tsc-alias": "^1.8.16",
     "typescript": "^5.5.4"
   },
   "lint-staged": {
@@ -53,6 +52,7 @@
   "dependencies": {
     "express-jwt": "^8.5.1",
     "express-jwt-authz": "^2.4.1",
-    "jwks-rsa": "^3.2.0"
+    "jwks-rsa": "^3.2.0",
+    "tsc-alias": "^1.8.16"
   }
 }
